Fix popover preferring shrinking over shifting when on the right edge Prevent arrow being shifted off alignment with the popover.

--- a/src/components/game-board.scss
+++ b/src/components/game-board.scss
@@ -39,6 +39,7 @@
   .message {
     max-width: calc(100vw - 4rem);
     max-height: calc(50vh - 1rem);
+    width: max-content;
   }
   &,
   > .arrow {
